# auto-repair

client/: index.html  package-lock.json  package.json  tsconfig.json
client/src/: App.tsx  default.css  index.css  main.tsx  models.ts  theme.ts
client/src/api/: api.ts
client/src/components/: addCar.tsx  addCarForSelf.tsx  addService.tsx  book.tsx  bookNoAuth.tsx  editCar.tsx  editCarForSelf.tsx  editContact.tsx  editContactById.tsx  editOrder.tsx  editService.tsx  header.tsx  login.tsx  (+2 more)
server/: .env.example  Cargo.toml
server/migrations/2022-09-30-165639_create_contacts/: up.sql
server/migrations/2022-09-30-165700_create_services/: up.sql
server/migrations/2022-09-30-165717_create_orders/: up.sql
server/migrations/2022-10-17-114902_create_users/: up.sql
server/migrations/2022-11-04-191709_create_cars/: up.sql
server/migrations/2022-11-04-192448_create_workers/: up.sql
server/migrations/2022-11-04-192754_create_specialties/: down.sql  up.sql
server/migrations/2022-11-04-192945_create_orders/: up.sql
server/migrations/2022-11-04-193209_create_sessions/: up.sql
server/src/: main.rs  routing.rs  schema.rs
server/src/api/: cars.rs  contacts.rs  mod.rs  orders.rs  reports.rs  services.rs  sql.rs  users.rs  workers.rs
server/src/data/: cars.rs  contacts.rs  mod.rs  orders.rs  reports.rs  services.rs  users.rs  workers.rs
server/src/errors/: map.rs  mod.rs
server/src/models/: car.rs  contact.rs  errors.rs  mod.rs  money.rs  order.rs  report_data.rs  service.rs  time.rs  timestamp.rs  user.rs  worker.rs
server/src/models/id/: keys.rs  mod.rs
(+27 files in other folders)
