[package]
name = "auto-repair"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.3"
actix-web = "4.2.1"
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
diesel-async = { git = "https://github.com/weiznich/diesel_async", version = "0.1.0", features = ["postgres", "deadpool"] }
dotenv = "0.15.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
